--- a/package.json
+++ b/package.json
@@ -27,5 +27,5 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
-  "packageManager": "^pnpm@9.15.3"
+  "packageManager": "pnpm@9.15.3"
 }
